# BlueMarble

./: .gitignore  CMakeLists.txt  README.md
shaders/: triangle.frag  triangle.vert
src/: main.cpp
